backend/ecommerce-user/chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-user-service
  labels:
    app: ecommerce-user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-user-service
  template:
    metadata:
      labels:
        app: ecommerce-user-service
    spec:
      containers:
        - name: ecommerce-user-service
          image: 0901324101/ecommerce-user:1.0.0
          ports:
            - containerPort: 8080
