backend/ecommerce-user/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-user-service
spec:
  type: ClusterIP
  selector:
    app: ecommerce-user-service
  ports:
    - port: 80
      targetPort: 8080
